# kde-l10n

./: CMakeLists.txt  CPackConfig.cmake  update.sh
eo/: CMakeLists.txt
eo/messages/: entry.desktop
eo/messages/applications/: bluedevil.po  libktorrent.po
eo/messages/kde-extraapps/: plasma_applet_org.kde.networkmanagement.po
eo/messages/kde-workspace/: polkit-kde-authentication-agent-1.po
eo/messages/kdelibs/: kdesudo.po  kwebkitpart.po
hu/: CMakeLists.txt
hu/messages/applications/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  bluedevil.po  dirfilterplugin.po  dolphin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  kate-ctags-plugin.po  kate.po  kate_kttsd.po  katebacktracebrowserplugin.po  katebuild-plugin.po  katecloseexceptplugin.po  katefilebrowserplugin.po  katefiletemplates.po  kategdbplugin.po  katehelloworld.po  katekonsoleplugin.po  katemailfilesplugin.po  kateopenheader.po  katepart4.po  kateproject.po  katesearch.po  katesnippetsplugin.po  katesql.po  katesymbolviewer.po  katetabbarextension.po  katetabifyplugin.po  katetextfilter.po  katexmlcheck.po  katexmltools.po  kcm-about-distro.po  kcmkio.po  kcmkonq.po  kcmkonqhtml.po  kcmkurifilt.po  kcmperformance.po  (+26 more)
hu/messages/kde-extraapps/: akregator.po  ark.po  audiocd_encoder_lame.po  audiocd_encoder_vorbis.po  cervisia.po  dragonplayer.po  filelight.po  fileviewbazaarplugin.po  fileviewgitplugin.po  fileviewhgplugin.po  fileviewsvnplugin.po  gwenview.po  juk.po  kapptemplate.po  kcachegrind.po  kcachegrind_qt.po  kcalc.po  kcharselect.po  kcmaudiocd.po  kcmcddb.po  kcmkamera.po  kcmkgamma.po  kcmkwallet.po  kcolorchooser.po  kcron.po  kde-nm-connection-editor.po  kdevcmake.po  kdevcmakebuilder.po  kdevcpp.po  kdevcustombuildsystem.po  kdevcustommake.po  kdevelop.po  kdevexecuteplasmoid.po  kdevformatters.po  kdevgdb.po  kdevghprovider.po  kdevkdeprovider.po  kdevmakebuilder.po  kdevmanpage.po  kdevninja.po  (+163 more)
hu/messages/kde-runtime/: imagerename_plugin.po  kcm_attica.po  kcm_emoticons.po  kcmcgi.po  kcmicons.po  kcmkded.po  kcmnotify.po  kde-menu.po  kdesu.po  kglobalaccel.po  khotnewstuff.po  kiconfinder.po  kio_applications.po  kio_archive.po  kio_floppy.po  kio_sftp.po  kio_smb.po  kio_thumbnail.po  kio_trash.po  kioclient.po  kioexec.po  kmimetypefinder.po  knotify4.po  kpasswdserver.po  kreadconfig.po  kstart.po  ktraderclient.po  kuiserver.po  kurifilter.po  kwinshutdown.po  kwinstartmenu.po  kwriteconfig.po  phonon_kde.po  plasma-remote-helper.po  plasma_applet_newspaper.po  plasma_scriptengine_qscript.po
hu/messages/kde-workspace/: attica_kde.po  audiorename_plugin.po  display.po  drkonqi.po  filetypes.po  freespacenotifier.po  htmlsearch.po  imagerename_plugin.po  joystick.po  kaccess.po  kblankscrn.po  kcm-kwin-scripts.po  kcm_attica.po  kcm_autostart.po  kcm_desktoppaths.po  kcm_desktopthemedetails.po  kcm_device_automounter.po  kcm_emoticons.po  kcm_infobase.po  kcm_infosummary.po  kcm_kdebugconfig.po  kcm_kwindesktop.po  kcm_kwintabbox.po  kcm_memory.po  kcm_pci.po  kcm_phonon.po  kcm_platform.po  kcm_solid_actions.po  kcm_standard_actions.po  kcmaccess.po  kcmbackground.po  kcmbell.po  kcmcgi.po  kcmcolors.po  kcmcomponentchooser.po  kcmdevinfo.po  kcmfonts.po  kcmhtmlsearch.po  kcmicons.po  kcminfo.po  (+187 more)
hu/messages/kdeaccessibility/: jovie.po  kaccessibleapp.po  kmag.po  kmousetool.po  kmouth.po
hu/messages/kdeadmin/: kcron.po  ksystemlog.po  kuser.po
hu/messages/kdeartwork/: kdeasciiquarium.po  klock.po  kpartsaver.po  kstyle_phase_config.po  kwin_art_clients.po  kxsconfig.po
hu/messages/kdeedu/: analitza.po  artikulate.appdata.po  artikulate.po  blinken.po  cantor.po  kalgebra.appdata.po  kalgebra.po  kalzium.po  kanagram.appdata.po  kanagram.po  kbruch.appdata.po  kbruch.po  kfile_drgeo.po  kfile_kig.po  kgeography.po  khangman.appdata.po  khangman.po  kig.po  kiten.appdata.po  kiten.po  klettres.appdata.po  klettres.po  kmplot.po  kstars.po  ktouch.po  kturtle.po  kwordquiz.po  libkdeedu.po  marble.po  marble_qt.po  marble_xml_mimetypes.po  pairs.po  pairseditor.po  parley.po  plasma_applet_Molmasscalculator.po  plasma_applet_concentrationCalculator.po  plasma_applet_gasCalculator.po  plasma_applet_kalgebraplasmoid.po  plasma_applet_kalzium.po  plasma_applet_nuclearCalculator.po  (+7 more)
hu/messages/kdegames/: bomber.po  bovo.po  granatier.po  kajongg.po  kapman.po  katomic.po  kblackbox.po  kblocks.po  kbounce.po  kbreakout.po  kdiamond.po  kfourinline.po  kgoldrunner.po  kigo.po  killbots.po  kiriki.po  kjumpingcube.po  klickety.po  klines.po  kmahjongg.po  kmines.po  knavalbattle.po  knetwalk.po  kolf.po  kollision.po  konquest.po  kpat.po  kreversi.po  kshisen.po  ksirk.po  ksirkskineditor.po  kspaceduel.po  ksquares.po  ksudoku.po  ktron.po  ktuberling.po  kubrick.po  libkdegames.po  libkmahjongg.po  lskat.po  (+2 more)
hu/messages/kdegraphics/: gwenview.po  kcmkamera.po  kcolorchooser.po  kfile_exr.po  kfile_pnm.po  kolourpaint.po  kruler.po  ksaneplugin.po  ksnapshot.po  libkdcraw.po  libksane.po  okular.po  okular_chm.po  okular_comicbook.po  okular_djvu.po  okular_dvi.po  okular_epub.po  okular_fax.po  okular_fictionbook.po  okular_ghostview.po  okular_kimgio.po  okular_mobi.po  okular_ooo.po  okular_plucker.po  okular_poppler.po  okular_tiff.po  okular_txt.po  okular_xps.po  org.kde.active.documentviewer.po  svgpart.po
hu/messages/kdelibs/: baloo_file.po  baloo_file_extractor.po  baloo_queryparser.po  baloosearch.po  balooshow.po  baloowidgets.po  kactivitymanagerd.po  kactivitymanagerd_fileitem_linking_plugin.po  kcertpart.po  kcm_activities.po  kcm_baloofile.po  kcmcrypto.po  kdecalendarsystems.po  kdelibs4.po  kdelibs_colors4.po  kdesudo.po  kfileaudiopreview4.po  kfilemetadata.po  kio4.po  kio_activities.po  (+11 more)
ia/messages/: CMakeLists.txt  entry.desktop
ja/: CMakeLists.txt
jv/: CMakeLists.txt
jv/messages/: entry.desktop
km/messages/: CMakeLists.txt
mai/: CMakeLists.txt
mai/messages/: entry.desktop
sq/: CMakeLists.txt
sq/messages/: entry.desktop
wa/messages/: CMakeLists.txt
zh_TW/: CMakeLists.txt
zh_TW/messages/: entry.desktop
(+46191 files in other folders)
