# Kate project
project (kde-extraapps)

#search packages used by KDE
set(QT_MIN_VERSION "4.8.2")
find_package(KDE4 4.14.3 REQUIRED)
include (KDE4Defaults)

# shared libs
set (LIBRARY_TYPE SHARED)

# enforce build of tests
set (KDE4_BUILD_TESTS "ON" CACHE "BOOL" "Enable building of tests" FORCE)

# KDE/QT definitions we want
add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
add_definitions (-DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -DKTEXTEDITOR_NO_DEPRECATED)

# global include directories
include_directories (${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDES})

macro_optional_add_subdirectory ( ar )
macro_optional_add_subdirectory ( ast )
macro_optional_add_subdirectory ( bg )
macro_optional_add_subdirectory ( bs )
macro_optional_add_subdirectory ( ca )
macro_optional_add_subdirectory ( ca@valencia )
macro_optional_add_subdirectory ( cs )
macro_optional_add_subdirectory ( da )
macro_optional_add_subdirectory ( de )
macro_optional_add_subdirectory ( el )
macro_optional_add_subdirectory ( en_GB )
macro_optional_add_subdirectory ( eo )
macro_optional_add_subdirectory ( es )
macro_optional_add_subdirectory ( et )
macro_optional_add_subdirectory ( eu )
macro_optional_add_subdirectory ( fa )
macro_optional_add_subdirectory ( fi )
macro_optional_add_subdirectory ( fr )
macro_optional_add_subdirectory ( ga )
macro_optional_add_subdirectory ( gl )
macro_optional_add_subdirectory ( he )
macro_optional_add_subdirectory ( hi )
macro_optional_add_subdirectory ( hr )
macro_optional_add_subdirectory ( hu )
macro_optional_add_subdirectory ( ia )
macro_optional_add_subdirectory ( is )
macro_optional_add_subdirectory ( it )
macro_optional_add_subdirectory ( ja )
macro_optional_add_subdirectory ( kk )
macro_optional_add_subdirectory ( km )
macro_optional_add_subdirectory ( ko )
macro_optional_add_subdirectory ( lt )
macro_optional_add_subdirectory ( lv )
macro_optional_add_subdirectory ( mai )
macro_optional_add_subdirectory ( mr )
macro_optional_add_subdirectory ( ms )
macro_optional_add_subdirectory ( nb )
macro_optional_add_subdirectory ( nds )
macro_optional_add_subdirectory ( nl )
macro_optional_add_subdirectory ( nn )
macro_optional_add_subdirectory ( pa )
macro_optional_add_subdirectory ( pl )
macro_optional_add_subdirectory ( pt )
macro_optional_add_subdirectory ( pt_BR )
macro_optional_add_subdirectory ( ro )
macro_optional_add_subdirectory ( ru )
macro_optional_add_subdirectory ( sk )
macro_optional_add_subdirectory ( sl )
macro_optional_add_subdirectory ( sr )
macro_optional_add_subdirectory ( sv )
macro_optional_add_subdirectory ( tg )
macro_optional_add_subdirectory ( th )
macro_optional_add_subdirectory ( tr )
macro_optional_add_subdirectory ( ug )
macro_optional_add_subdirectory ( uk )
macro_optional_add_subdirectory ( wa )
macro_optional_add_subdirectory ( zh_CN )
macro_optional_add_subdirectory ( zh_TW )
