project (kde-l10n)

find_package(KDE4 4.22.0 REQUIRED)
find_package(Gettext REQUIRED)

include(KDE4Defaults)

if(NOT GETTEXT_MSGMERGE_EXECUTABLE)
    message(FATAL_ERROR "Please install the msgmerge binary")
elseif(NOT GETTEXT_MSGFMT_EXECUTABLE)
    message(FATAL_ERROR "Please install the msgfmt binary")
endif()

kde4_optional_add_subdirectory( ar )
kde4_optional_add_subdirectory( ast )
kde4_optional_add_subdirectory( be )
kde4_optional_add_subdirectory( bg )
kde4_optional_add_subdirectory( bs )
kde4_optional_add_subdirectory( ca )
kde4_optional_add_subdirectory( ca@valencia )
kde4_optional_add_subdirectory( cs )
kde4_optional_add_subdirectory( da )
kde4_optional_add_subdirectory( de )
kde4_optional_add_subdirectory( el )
kde4_optional_add_subdirectory( en_AU )
kde4_optional_add_subdirectory( en_CA )
kde4_optional_add_subdirectory( en_GB )
kde4_optional_add_subdirectory( eo )
kde4_optional_add_subdirectory( es )
kde4_optional_add_subdirectory( et )
kde4_optional_add_subdirectory( eu )
kde4_optional_add_subdirectory( fa )
kde4_optional_add_subdirectory( fi )
kde4_optional_add_subdirectory( fr )
kde4_optional_add_subdirectory( ga )
kde4_optional_add_subdirectory( gl )
kde4_optional_add_subdirectory( he )
kde4_optional_add_subdirectory( hi )
kde4_optional_add_subdirectory( hr )
kde4_optional_add_subdirectory( hu )
kde4_optional_add_subdirectory( ia )
kde4_optional_add_subdirectory( id )
kde4_optional_add_subdirectory( is )
kde4_optional_add_subdirectory( it )
kde4_optional_add_subdirectory( ja )
kde4_optional_add_subdirectory( jv )
kde4_optional_add_subdirectory( kk )
kde4_optional_add_subdirectory( km )
kde4_optional_add_subdirectory( ko )
kde4_optional_add_subdirectory( lt )
kde4_optional_add_subdirectory( lv )
kde4_optional_add_subdirectory( mr )
kde4_optional_add_subdirectory( ms )
kde4_optional_add_subdirectory( nb )
kde4_optional_add_subdirectory( nds )
kde4_optional_add_subdirectory( nl )
kde4_optional_add_subdirectory( nn )
kde4_optional_add_subdirectory( oc )
kde4_optional_add_subdirectory( pa )
kde4_optional_add_subdirectory( pl )
kde4_optional_add_subdirectory( ps )
kde4_optional_add_subdirectory( pt )
kde4_optional_add_subdirectory( pt_BR )
kde4_optional_add_subdirectory( ro )
kde4_optional_add_subdirectory( ru )
kde4_optional_add_subdirectory( sk )
kde4_optional_add_subdirectory( sl )
kde4_optional_add_subdirectory( sq )
kde4_optional_add_subdirectory( sr )
kde4_optional_add_subdirectory( sr@ijekavian )
kde4_optional_add_subdirectory( sr@ijekavianlatin )
kde4_optional_add_subdirectory( sr@latin )
kde4_optional_add_subdirectory( sv )
kde4_optional_add_subdirectory( te )
kde4_optional_add_subdirectory( tg )
kde4_optional_add_subdirectory( tl )
kde4_optional_add_subdirectory( tr )
kde4_optional_add_subdirectory( ug )
kde4_optional_add_subdirectory( uk )
kde4_optional_add_subdirectory( wa )
kde4_optional_add_subdirectory( zh_CN )
kde4_optional_add_subdirectory( zh_TW )
