add_subdirectory(applications)
add_subdirectory(kdeadmin)
add_subdirectory(kdegraphics)
add_subdirectory(kdelibs)
add_subdirectory(kdemultimedia)
add_subdirectory(kdenetwork)
add_subdirectory(kdesdk)
add_subdirectory(kdeutils)
add_subdirectory(kde-workspace)
add_subdirectory(kde-extraapps)
install(FILES entry.desktop DESTINATION ${LOCALE_INSTALL_DIR}/${CURRENT_LANG}/ )
