add_subdirectory(applications)
add_subdirectory(kdeaccessibility)
add_subdirectory(kdelibs)
add_subdirectory(kde-workspace)
add_subdirectory(kde-extraapps)
add_subdirectory(qt)
install(FILES entry.desktop DESTINATION ${LOCALE_INSTALL_DIR}/${CURRENT_LANG}/ )
install(FILES flag.png DESTINATION ${LOCALE_INSTALL_DIR}/${CURRENT_LANG}/ )
