add_subdirectory( bookmarks )
add_subdirectory( cache )
add_subdirectory( cookies )
add_subdirectory( ebrowsing )
add_subdirectory( emoticons )
add_subdirectory( filemanager )
add_subdirectory( filetypes )
add_subdirectory( icons )
add_subdirectory( kcmcss )
add_subdirectory( kcmlaunch )
add_subdirectory( kcmnotify )
add_subdirectory( khtml-adblock )
add_subdirectory( khtml-behavior )
add_subdirectory( khtml-general )
add_subdirectory( khtml-java-js )
add_subdirectory( khtml-plugins )
add_subdirectory( language )
add_subdirectory( netpref )
add_subdirectory( performance )
add_subdirectory( proxy )
add_subdirectory( smb )
add_subdirectory( spellchecking )
add_subdirectory( useragent )
